# rs-gavisunk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: assign_read_ctg.rs  filter_bad_sunks.rs  get_kmers.rs  io.rs  main.rs  map_kmers.rs  sunk_graph.rs
test/expected/: AMY_HG02723_sunk.loc
test/input/: all.bed  all.fa  all_ONT.fa
